# ckb-script-templates

./: README.md  cargo-generate.toml
.github/workflows/: rust.yml
add-debugger/: Cargo.toml  cargo-generate.toml
add-debugger/src/: contract-lib.rs  lib.rs
atomics-contract/: Cargo.toml  Makefile  build.rs
atomics-contract/src/: main.rs
c-wrapper-crate/: Cargo.toml  build.rs
c-wrapper-crate/src/: lib.rs
contract/: Cargo.toml  Makefile
contract-with-tests/: Cargo.toml  Makefile
contract-with-tests/src/: main.rs
contract-with-tests/src/tests/: tests.rs
contract-without-simulator/: Cargo.toml
contract-without-simulator/.cargo-generate/: tests.rs
contract-without-simulator/src/: main.rs
contract/.cargo-generate/: README.md  tests.rs
contract/src/: lib.rs  main.rs
native-simulator/: Cargo.toml  GlobalMakefile  README.md  cargo-generate.toml
native-simulator/src/: contract-lib.rs  lib.rs
stack-reorder-contract/: Cargo.toml  Makefile  bootloader.S  build.rs  ld_interface.ld
stack-reorder-contract/src/: main.rs
standalone-contract/: Cargo.toml  Makefile
standalone-contract/scripts/: find_clang  reproducible_build_docker
standalone-contract/src/: main.rs
standalone-contract/src/tests/: mod.rs  tests.rs
workspace/: Cargo.toml  Makefile  README.md
workspace/docs/: debugging_contract.md
workspace/scripts/: add-debugger  generate-native-simulator  reproducible_build_docker
workspace/tests/: Cargo.toml
workspace/tests/src/: lib.rs  tests.rs
x64-simulator-crate/: Cargo.toml  README.md
x64-simulator-crate/src/: lib.rs
