[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
{{contract_name}} = { path = "../", features = ["simulator"] }
ckb-std = { version = "0.15.1", features = ["simulator"] }

[lib]
crate-type = ["cdylib"]

[workspace]

# TODO: Will be deleted after release
[replace]
"ckb-std:0.15.3" = { git = "https://github.com/nervosnetwork/ckb-std.git", branch = "master" }
"ckb-x64-simulator:0.8.0" = { git = "https://github.com/joii2020/ckb-x64-simulator.git", branch = "main" }