[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.16.3", default-features = false, features = ["allocator", "calc-hash", "ckb-types", "libc"] }
log = { version = "0.4.20", default-features = false }

[build-dependencies]
cc = "1.0"

[features]
native-simulator = ["ckb-std/native-simulator"]
