[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "tests",
]

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1

[profile.ckb-debug]
inherits = "release"
strip = false
debug = true

# TODO: Will be deleted after release
[replace]
"ckb-std:0.15.3" = { git = "https://github.com/nervosnetwork/ckb-std.git", rev = "36942aa" }