[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-std = "1.0"

# Supporting native tests powered by ckb-x64-simulator
[target.'cfg(all(target_arch = "x86_64", unix))'.dependencies.ckb-std]
version = "1.0"
features = ["native-simulator"]

[target.'cfg(all(target_arch = "x86_64", unix))'.dev-dependencies]
ckb-testtool = "1.0"
rusty-fork = "0.3.0"
rand = "0.8.5"
serde_json = "1.0"
tempfile = "3.9.0"
